# netrek-server-paradise

./: ChangeLog  Makefile.in  README  configure  configure.in
docs/: CHANGELOG  CHANGES  CREDITS  README.sysdef  conf.metaservers  conf.sysdef  motd
etc/: clue.letter  conf.balanced  conf.metaservers  conf.pics  conf.pics.ds9  conf.sysdef  conf.sysdef.deepspace  motd  ranks.conf  setup.conf
src/: Makefile.in  configure
src/common/: Makefile.in  cutil.c  data.c  detonate.c  enter.c  getship.c  grid.c  imath.c  interface.c  orbit.c  parse-ranks.c  path.c  phaser.c  plutil.c  shmem.c  sintab.c  smessage.c  structdesc.c  torp.c  util.c
src/daemon/: Makefile.in  conquer.c  daemonII.c  dutil.c  misc.c  planets.c  player.c  shipvals.c  solicit.c  stats.c  sysdefaults.c  terrain.c  tourny.c  wander2.c  weapons.c
src/daemon/galaxygen/: Makefile.in  galaxygen-1.c  galaxygen-2.c  galaxygen-3.c  galaxygen-4.c  galaxygen-5.c  galaxygen-6.c  galaxygen-7.c  galaxygen-8.c  galaxygen-9.c  galaxygenlib.c
src/daemon/pl_gen/: Makefile  Makefile.in  pl_gen0.c  pl_gen1.c  pl_gen2.c  pl_gen3.c  pl_gen4.c  pl_gen5.c  pl_gen6.c  pl_gen7.c  pl_gen8.c
src/etc/: version
src/include/: config.h.in  copyright2.h  copyright3.h  cutil.h  daemonII.h  data.h  defs.h  game.h  gameconf.h  getship.h  gppackets.h  grid.h  imath.h  misc.h  net.h  ntserv.h  orbit.h  packets.h  parsexbm.h  path.h  planets.h  player.h  plutil.h  proto.h  robot_functions.h  robot_newbie.h  servconf.h  shmem.h  shmemP.h  struct.h  structdesc.h  sysdef.h  terrain.h  tool-util.h  util.h  weapons.h  wtext.h
src/listen/: Makefile.in  listen.c
src/ntserv/: Makefile.in  cluecheck.c  death.c  fatudp.c  feature.c  findslot.c  gameconf.c  getentry.c  getname.c  input.c  main.c  message.c  missile.c  packets.c  parsexbm.c  ping.c  plasma.c  redraw.c  smessage.c  socket.c  sockio.c  timecheck.c  warning.c
src/pped/: Makefile.in  Makefile.org  common.h  data.c  data.h  db.c  db.h  file.c  file.h  interface.c  interface.h  intfdesc.h  main.c  main.h  pped-interface.c  ppeddata.h
src/robot/: Makefile.in  rmove.c  robotII.c  robot_functions.c  robot_functions.h  robot_newbie.c  robot_newbie.h
src/rsa/: Makefile.in
src/snake/: Makefile.in  snake.c  snakemove.c
src/tools/: Makefile.in  getstats.c  tool-ds.c  tool-heraldry.c  tool-hr.c  tool-hs.c  tool-mes.c  tool-pl.c  tool-promo.c  tool-reset.c  tool-trim.c  tool-util.c  tool-wm.c  tool-xtk.c
