dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.in)

dnl do the header thing
AC_CONFIG_HEADER($srcdir/src/include/config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl Allows use of $(MAKE)
AC_PROG_MAKE_SET

dnl Checks for libraries.
dnl Replace `main' with a function in -lncurses:
AC_CHECK_LIB(ncurses, main)
dnl Replace `main' with a function in -lcurses:
AC_CHECK_LIB(curses, main)
dnl Replace `main' with a function in -lm:
dnl AC_CHECK_LIB(m, main)
dnl Replace `main' with a function in -ltermcap:
AC_CHECK_LIB(termcap, main)

ZLIB=""

AC_CHECK_LIB(z, uncompress, [ZLIB=-lz],
[
  echo
  echo "*** Could not find compression library (libz)."
  echo "*** Make sure that it is installed, and set"
  echo "*** the LDFLAGS environment variable to point to it"
  echo "*** with -Lpath before re-running configure."
  echo
  exit 1
]
)

dnl Checks for header files.
dnl if STDC_HEADERS is defined, this includes
dnl assert.h ctype.h float.h limits.h math.h
dnl setjmp.h signal.h stdarg.h stdio.h stdlib.h string.h time.h
dnl errno.h stddef.h (locale.h wchar.h iso646.h wctype.h)
dnl
dnl this software requires STD ANSI headers.

AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h sys/file.h sys/ioctl.h)

dnl Check for ZLIB headers
AC_CHECK_HEADERS(zlib.h, [/bin/true],
[
  echo 
  echo "*** Could not find compression library header (zlib.h)."
  echo "*** Make sure that it is installed and set"
  echo "*** the CPPFLAGS environment variable to point to it"
  echo "*** with -Ipath before re-running configure."
  echo 
  exit 1
]
)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_HEADER_TIME
AC_STRUCT_TM
AC_STRUCT_TIMEZONE
AC_TYPE_UID_T

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_FUNC_SETVBUF_REVERSED
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_UTIME_NULL
AC_FUNC_VPRINTF
AC_FUNC_WAIT3
AC_CHECK_FUNCS(gethostname gettimeofday putenv select socket strdup strerror)

dnl Check for RSA authentication
AUTH_OBJS=""
AUTH_DEFS=""
AUTH_LIBS=""
AUTH_PROG=""
AUTH_PROG_OBJS=""
AUTH_DEP_LIB=""
AUTH_DEP_VPATH=""

AC_ARG_ENABLE(rsa,
[  --enable-rsa            Enable RSA authentication support in server],

[
  if test "x$enableval" != xno; then

    AUTH_DEFS="-DAUTHORIZE" 
    AUTH_PROG="keycomp"
    AUTH_PROG_OBJS="rsa_keycomp.o"
    AUTH_DEP_LIB="rsa.a"
    AUTH_DEP_VPATH="src/rsa"
  ]

  AC_CHECK_HEADERS(gmp.h, 
                   [ac_have_gmp_h="yes"],
                   [ echo "  *** Cannot find gmp.h"
		     ac_have_gmp_h="no" ])
  [ if test "x$ac_have_gmp_h" = xyes; then ]
    AC_CHECK_LIB(gmp, mpz_init,
                 [
		   AUTH_OBJS="rsa-server.o rsa_utilmp.o"
		   AUTH_LIBS="-lgmp"
		 ],
		 [ echo "  *** Cannot find -lgmp" 
		   ac_have_gmp_lib="no" ])
  [ fi
    if test "x$ac_have_gmp_lib" = xno; then ]
    AC_CHECK_HEADERS(mp.h,
                     [ac_have_mp_h="yes"],
		     [ echo "  *** Cannot find mp.h"
		       ac_have_mp_h="no" ])
    [ if test "x$ac_have_mp_h" = xyes; then ]
      AC_CHECK_LIB(mp, pow,
                   [
		     AUTH_OBJS="rsa-server.o rsa_utilmp.o"
		     AUTH_LIBS="-lmp"
		   ],
                   [ echo "  *** Cannot find -lmp"
		     AUTH_OBJS="rsa-server.o rsa_util.o" ])
    [ fi
  fi
fi ]
)

AC_SUBST(ZLIB)
AC_SUBST(AUTH_OBJS)
AC_SUBST(AUTH_DEFS)
AC_SUBST(AUTH_LIBS)
AC_SUBST(AUTH_PROG)
AC_SUBST(AUTH_PROG_OBJS)
AC_SUBST(AUTH_DEP_LIB)
AC_SUBST(AUTH_DEP_VPATH)

AC_OUTPUT(src/Makefile src/common/Makefile src/daemon/Makefile src/daemon/pl_gen/Makefile src/listen/Makefile src/ntserv/Makefile src/robot/Makefile src/snake/Makefile src/tools/Makefile src/pped/Makefile Makefile)
